[package]
name = "smstools"
description = "A set of utilities for processing SMS backups"
version = "0.1.0"
authors = ["Techcable <Techcable@techcable.net>"]
publish = false
edition = "2021"

[dependencies]
# Argument parsing
clap = { version = "4", features = ["derive", "cargo"] }
# Time library
chrono = { version = "^0.4", features = ["serde"] }
# Serde
serde_json = "^1"
serde = { version = "1", features = ["derive"] }
# base64
base64 = "0.9.2"
base64-serde = "0.3"
# TODO: Switch to better/different XML system?
xml5ever = { git = "https://github.com/servo/html5ever.git", tag = "xml5ever-v0.17.0" }
markup5ever_rcdom = { git = "https://github.com/servo/html5ever.git", tag = "xml5ever-v0.17.0" }
# Itertools :D
itertools = "^0.7.8"
# Templating Engines
maud = "0.24"
# Errors
anyhow = "1"